--- a/recipes/PeachMoonshine.html
+++ b/recipes/PeachMoonshine.html
@@ -8,7 +8,8 @@
 <body>
    <h1>Feeling Peachy</h1>
    <p1> Summer afternoons around the camper or at the pool occasionally calls for a 
-    relaxing drink. One of my favorite adult beverages happens to be moonshine and <a href="https://www.ozarkdistillery.com/">Ozark Distillery</a> 
+    relaxing drink. One of my favorite adult beverages happens to be moonshine and <a href="https://www.ozarkdistillery.com/" 
+    target="_blank" rel="norefferer">Ozark Distillery</a> 
     moonshine offers a lot of options!! On this post I'll be sharing recipes I make with their peach
     flavor!
    </p1>
