--- a/recipes/PeachMoonshine.html
+++ b/recipes/PeachMoonshine.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>Feeling Peachy</h1>
+    <img src="../img/still-at-ozark-distillery.jpg" width="35%">
    <p1> Summer afternoons around the camper or at the pool occasionally calls for a 
     relaxing drink. One of my favorite adult beverages happens to be moonshine and <a href="https://www.ozarkdistillery.com/" 
     target="_blank" rel="norefferer">Ozark Distillery</a> 
