--- a/recipes/PeachMoonshine.html
+++ b/recipes/PeachMoonshine.html
@@ -7,14 +7,17 @@
 </head>
 <body>
    <h1>Feeling Peachy</h1>
-    <img src="../img/still-at-ozark-distillery.jpg" width="35%">
+    <img src="../img/still-at-ozark-distillery.jpg" alt="A picture of the still at Ozark Distillery" width="50%"> <h4>The still at Ozark Distillery</h4>
    <p1> Summer afternoons around the camper or at the pool occasionally calls for a 
     relaxing drink. One of my favorite adult beverages happens to be moonshine and <a href="https://www.ozarkdistillery.com/" 
     target="_blank" rel="norefferer">Ozark Distillery</a> 
     moonshine offers a lot of options!! On this post I'll be sharing recipes I make with their peach
     flavor!
+    If you are ever in the Lake of The Ozarks, Missouri, take an afternnon and visit the distillery. They offer tastings and a full 
+    resturant. You can also schedule a tour!! Its a neat experiance and a great way to spend an afternoon in the AC. 
    </p1>
     <h2>Peaches and Cream</h2>
+    <img src="../img/peach2.jpg" alt="peach drink in a mug by peabody" width="30%"> <h4>Culinary Concoctions By Peabody</h4>
     <p2>This simple and refreshing drink is super easy and you can keep
         all the ingredients in a small travel cooler. Yay camping!!!
         <ul>
@@ -22,5 +25,15 @@
             <li>2oz of peach moonshine</li>
         </ul>
     </p2>
+    <h2>Peachy Keen</h2>
+    <img src="../img/peach1.jpg" alt="peach tea in mason jar and small glasses" width="30%"> <h4>I stole this picture from pinterest</h4>
+    Another super easy summer drink I love is peach tea and peach moonshine. 
+    This one is a little less deliberate in exicution so please bear with me.
+     <ol>
+        <li> Make or buy your favorite peach ice tea and put in into a pitch just a little too big. We need room!!</li>
+        <li> Grab you peach moonshine and give it a pour!! I tend to be a little heavy handed here but that's not always a bad thing</li>
+        <li> Cut up a fresh peach and garnish the top of the pitcher and any glasses you plan to use</li>
+        <li> Pour your lovely tea into glasses and serve to guests!</li>
+     </ol>
 </body>
 </html>
