--- a/recipes/PeachMoonshine.html
+++ b/recipes/PeachMoonshine.html
@@ -6,6 +6,7 @@
     <title>Just Peachy</title>
 </head>
 <body>
+    <a href="../index.html">Index Page</a>
    <h1>Feeling Peachy</h1>
     <img src="../img/still-at-ozark-distillery.jpg" alt="A picture of the still at Ozark Distillery" width="50%"> <h4><em>The still at Ozark Distillery</em></h4>
    <p1> Summer afternoons around the camper or at the pool occasionally calls for a 
