--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
                 <li>Peachy Keen- can also be found under Peach Moonshine</li>
                 <li> <a href="https://realhousemoms.com/peach-lemonade-sangria/" target="_blank"> Peach Sangria</a>- can be found on RealHouseMoms </li>
             </ul>
+
+        <h2>Meals for Camping</h2>
+            <ul>
+                <li><a href="recipes/FoilPacketDinner.html">Foil Dinner Packets</a> - for the nights you just want to relax</li>
+            </ul>    
 </body>
 </html>
