--- a/recipes/FoilPacketDinner.html
+++ b/recipes/FoilPacketDinner.html
@@ -6,6 +6,7 @@
     <title>Foil Dinners!!</title>
 </head>
 <body>
+    <h4> <a href="../index.html">Index Page</a> </h4>
     <h1>Foil Dinner Packets- the easiest camp dinner ever!!</h1>
     <p1>I've been camping since I was a kids and in recent years i have had the joy of sharing that
         with my own kids. Let's be honset though, camping hits different when you are the adult, or parent, in charge. 
@@ -63,7 +64,7 @@
             <li>Time to open them and eat!! Be careful of the steam and have adults or older kids help little ones!</li>                        
         </ol>
     </p3>  
-    <h3>Be ispired!!</h3>
+    <h3>Be inspired!!</h3>
     <p4>
         If you need a little inspiration you can check out these awsome lists I found on pinterest!!
         <ul>
