Add campfire picture
added campfire picture to foil dinner page

--- a/recipes/FoilPacketDinner.html
+++ b/recipes/FoilPacketDinner.html
@@ -16,6 +16,7 @@
         can do them in an oven. I also tend to just let the kids fill their own packets because they are much less 
         likely to complain.  
     </p1>
+    <img src="../img/campfire.jpg" alt="Kids around a campfire at sunset" width="60%" >
     <h3>For this recipe you will need:</h3>
     <p2>
         <h5>Tools and Utensils</h5>
